--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gregorypothier.github.io/pothier",
+  "homepage": "https://gregorypothier.github.io",
   "name": "pothier",
   "version": "0.1.0",
   "private": true,
